v3.3.25 (2019-XX-XX)
--------------------

* Fixed cut'n'pasting code from the documentation into arangosh.

* Fixed bug in MoveShard::abort which causes a duplicate entry in the follower list. (Internal Bug #4378)

* Correct rocksdb statistics to report sums from column families instead of
  single value from default column family.

* Disabled enforce-block-cache-size-limit because of bugs in RocksDB 5.6.


v3.3.24 (2019-08-09)
--------------------

* re-added warning for kernel setting "overcommit_memory=2" if jemalloc is also enabled.

* Decreased unnecessary wait times for agency callbacks in case they were
  called earlier than expected by main thread.

* upgraded arangodb starter version to 0.14.12

* upgrade arangosync version to 0.6.5

* arangoimport would not stop, much less report, communications errors.  Add CSV reporting
  of line numbers that are impacted during such errors

* changed several internal VelocyPack comparisons in the cluster to not check for bytewise identity,
  but for logical intentity of objects

* fix handling 0 byte-WAL files in RocksDB engine when encryption is turned on. From now
  on, any 0 byte-WAL files will be ignored when found at startup and not trigger a "Corruption" error.

* fix timeout-response in case of simultaneous index create/drop in cluster

* Fixed parsing of ArangoDB config files with inlined comments. Previous versions didn't handle
  line comments properly if they were appended to an otherwise valid option value.

  For example, the comment in the line

      max-total-wal-size = 1024000 # 1M

  was not ignored and made part of the value. In the end, the value was interpreted as if

      max-total-wal-size = 10240001000000

  was specified.
  This version fixes the handling of comments in the config files so that they behave as intended.

* fixed a crash when posting an async request to the server using the "x-arango-async"
  request header and the server's request queue was full
