@@ -1,6 +1,9 @@
 v3.3.25 (2019-XX-XX)
 --------------------
 
+* Fixed non-deterministic occurrences of "document not found" errors in sharded 
+  collections with custom shard keys (i.e. non-`_key`) and multi-document lookups.
+
 * Fixed cut'n'pasting code from the documentation into arangosh.
 
 * Fixed bug in MoveShard::abort which causes a duplicate entry in the follower list. (Internal Bug #4378)
